--- a/DeepLearning_NHF (3).ipynb
+++ b/DeepLearning_NHF (3).ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -712,12 +712,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "!!4!Commit test!!!!44!!!4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sklearn\n",
+      "  Downloading https://files.pythonhosted.org/packages/1e/7a/dbb3be0ce9bd5c8b7e3d87328e79063f8b263b2b1bfa4774cb1147bfcd3f/sklearn-0.0.tar.gz\n",
+      "Collecting scikit-learn (from sklearn)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f4/cb/64623369f348e9bfb29ff898a57ac7c91ed4921f228e9726546614d63ccb/scikit_learn-0.23.2-cp37-cp37m-manylinux1_x86_64.whl (6.8MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 6.8MB 197kB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.13.3 in /home/meszaros_g99/.local/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.19.2)\n",
+      "Collecting joblib>=0.11 (from scikit-learn->sklearn)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/fc/c9/f58220ac44a1592f79a343caba12f6837f9e0c04c196176a3d66338e1ea8/joblib-0.17.0-py3-none-any.whl (301kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 307kB 4.4MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting threadpoolctl>=2.0.0 (from scikit-learn->sklearn)\n",
+      "  Downloading https://files.pythonhosted.org/packages/f7/12/ec3f2e203afa394a149911729357aa48affc59c20e2c1c8297a60f33f133/threadpoolctl-2.1.0-py3-none-any.whl\n",
+      "Requirement already satisfied: scipy>=0.19.1 in /home/meszaros_g99/.local/lib/python3.7/site-packages (from scikit-learn->sklearn) (1.5.3)\n",
+      "Building wheels for collected packages: sklearn\n",
+      "  Running setup.py bdist_wheel for sklearn ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/meszaros_g99/.cache/pip/wheels/76/03/bb/589d421d27431bcd2c6da284d5f2286c8e3b2ea3cf1594c074\n",
+      "Successfully built sklearn\n",
+      "Installing collected packages: joblib, threadpoolctl, scikit-learn, sklearn\n",
+      "Successfully installed joblib-0.17.0 scikit-learn-0.23.2 sklearn-0.0 threadpoolctl-2.1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "###Commit test"
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Activation, Conv2D, MaxPooling2D, Dropout, Flatten, Embedding\n",
+    "from tensorflow.keras.callbacks import Callback\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "import numpy as np\n",
+    "from sklearn import preprocessing\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "import random as python_random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TrainingHistory(Callback):\n",
+    "    # Empty lists\n",
+    "    def on_train_begin(self, logs={}):\n",
+    "        # Loss in training data\n",
+    "        self.losses = []\n",
+    "        # Loss in validation data\n",
+    "        self.valid_losses = []\n",
+    "        # Accuracy in training data\n",
+    "        self.accs = [] \n",
+    "        # Accuracy in validation data\n",
+    "        self.valid_accs = []\n",
+    "        # Epoch number\n",
+    "        self.epoch = 0\n",
+    "    \n",
+    "    # Saving network state\n",
+    "    def on_epoch_end(self, epoch, logs={}):\n",
+    "        self.losses.append(logs.get('loss'))\n",
+    "        self.valid_losses.append(logs.get('val_loss'))\n",
+    "        self.accs.append(logs.get('acc'))\n",
+    "        self.valid_accs.append(logs.get('val_acc'))\n",
+    "        self.epoch += 1\n",
+    "        \n",
+    "history = TrainingHistory()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_2 (Conv2D)            (None, 24, 24, 32)        832       \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 20, 20, 64)        51264     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 10, 10, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 10, 10, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 6400)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_6 (Dense)              (None, 128)               819328    \n",
+      "_________________________________________________________________\n",
+      "dropout_3 (Dropout)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_7 (Dense)              (None, 10)                1290      \n",
+      "=================================================================\n",
+      "Total params: 872,714\n",
+      "Trainable params: 872,714\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = Sequential() \n",
+    "model.add(Conv2D(32, kernel_size=(5, 5), activation='relu', input_shape=(28,28,1,))) \n",
+    "model.add(Conv2D(64, (5, 5), activation='relu')) \n",
+    "model.add(MaxPooling2D(pool_size=(2, 2))) \n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(128, activation='relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(10, activation='softmax'))\n",
+    "\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, TensorBoard\n",
+    "patience=10\n",
+    "early_stopping=EarlyStopping(patience=patience, verbose=1)\n",
+    "checkpointer=ModelCheckpoint(filepath='model.hdf5', save_best_only=True, verbose=1)\n",
+    "tb = TensorBoard(log_dir='logs', histogram_freq=1, write_graph=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='categorical_crossentropy', optimizer=Adam(), metrics=['accuracy'])"
    ]
   },
   {
