--- a/DeepHF/HyperOptScript.ipynb
+++ b/DeepHF/HyperOptScript.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All of the imports are here"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -35,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "data function is necessary for the hyperoptimization because it provides all the data the model needs which are training and validation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -50,7 +64,6 @@
     "            data, truth, _, _ = line.split()\n",
     "            data = data.replace(\".\", replaceString, 1)\n",
     "            truth = truth.replace(\".\", replaceString, 1)\n",
-    "            # This method is slow but we only have a 1000 lines so this quick and dirty algortihm will do just fine\n",
     "            \n",
     "            trainData.append([data, truth])\n",
     "            \n",
@@ -62,17 +75,16 @@
     "            data, truth, _, _ = line.split()\n",
     "            data = data.replace(\".\", replaceString, 1)\n",
     "            truth = truth.replace(\".\", replaceString, 1)\n",
-    "            # This method is slow but we only have a 1000 lines so this quick and dirty algortihm will do just fine\n",
-    "            # If we had much more data we would consider reserveing the memory first.\n",
     "            valData.append([data, truth])\n",
     "    \n",
     "    HEIGHT = 64\n",
     "    WIDTH = 64\n",
     "    \n",
+    "    # Loading train data from the small dataset (64x64)\n",
     "    trainPermutation = np.random.permutation(len(trainData))\n",
     "    data = [None] * len(trainData)\n",
     "    truth = [None] * len(trainData)\n",
-    "    \n",
+    "     \n",
     "    for i in range(0, len(trainPermutation)):\n",
     "        in_path = trainData[trainPermutation[i]][0]\n",
     "        truth_path = trainData[trainPermutation[i]][1]\n",
@@ -88,6 +100,7 @@
     "        \n",
     "        data[i] = raw\n",
     "        \n",
+    "    # Loading validation data from the small dataset (64x64)\n",
     "    valPermutation = np.random.permutation(len(valData))\n",
     "    val_data = [None] * len(valData)\n",
     "    val_truth = [None] * len(valData)\n",
@@ -112,6 +125,7 @@
     "    val_data = np.array(val_data)\n",
     "    val_truth = np.array(val_truth)\n",
     "    \n",
+    "    # Normalizing\n",
     "    truth = truth.reshape(-1, 1)\n",
     "    val_truth = val_truth.reshape(-1, 1)\n",
     "    scaler = StandardScaler()\n",
@@ -122,6 +136,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we define our model and choose between the paramertes for it from the given choices. We save the model parameters into a .csv file"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -129,6 +150,7 @@
    "source": [
     "def create_model(data, truth, val_data, val_truth):    \n",
     "            \n",
+    "    # Each parameter is choosing one from their choises every evaluation\n",
     "    n_layer1 = {{choice([4, 8, 16, 32])}}\n",
     "    n_layer2 = {{choice([4, 8, 16, 32])}}\n",
     "    n_layer3 = {{choice([4, 8, 16, 32])}}\n",
@@ -165,6 +187,7 @@
     "    elif optim == 'adam':\n",
     "        optimiz = Adam(learning_rate=lr)\n",
     "        \n",
+    "    # Making the model with the choosen parameters\n",
     "    model = Sequential() \n",
     "    model.add(Conv2D(n_layer1, kernel_size=(k_size1, k_size1), activation=activat, input_shape=(HEIGHT, WIDTH, 3), strides= stride_1)) \n",
     "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
@@ -188,6 +211,7 @@
     "              callbacks=callbacks,\n",
     "              shuffle=True)\n",
     "    \n",
+    "    # Saving the best validation lost\n",
     "    best_val_loss = np.amin(result.history['val_loss']) \n",
     "    \n",
     "    print('Best val_loss:', best_val_loss, end='\\n\\n')\n",
@@ -13867,7 +13891,7 @@
     }
    ],
    "source": [
-    "# Start hyperparameter optimalization\n",
+    "# Start of the hyperparameter optimalization\n",
     "start_time = time.time()\n",
     "best_run, best_model = optim.minimize(model=create_model,\n",
     "                                          data=data,\n",
@@ -13876,7 +13900,16 @@
     "                                          notebook_name='HyperOptScript',\n",
     "                                          trials=Trials())\n",
     "opt_end_time = time.time()\n",
+    "\n",
+    "# Printing the time the optimalization took\n",
     "print(\"\\nHyperOpt time taken: \" + str(opt_end_time-start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the logged list of paramertes. We are using the pandas package because it can display our parameters nicely in rows and cloumns."
    ]
   },
   {
@@ -14171,7 +14204,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -14444,6 +14477,13 @@
     "# Worst 10 optimization\n",
     "hyperas_worst10 = hyperas_log.sort_values(by=['best_val_loss'], ascending=False).head(n=10)\n",
     "hyperas_worst10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The diagrams show for each parameter its distribution between the choises. The highlighted ones are the best (red) or the worst (yellow). "
    ]
   },
   {
